post中文标题 及 修改

--- a/_posts/2014-04-05-new-post.md
+++ b/_posts/2014-04-05-new-post.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "new post"
+title: "日常"
 description: ""
-category: 
-tags: []
+category: daily
+tags: [daily]
 ---
 {% include JB/setup %}
