修改index 加入测试文章

--- a/_posts/2014-04-08-new-post.md
+++ b/_posts/2014-04-08-new-post.md
@@ -7,10 +7,11 @@ tags: [ daily ]
 ---
 {% include JB/setup %}
 
-	今天晚上找了一间全是男生的自习室，然后达到了两周内效率最高的三个小时！深刻认识了自己的吊死本性。。也证明我是纯直男啊哈哈。。好孤独T_T
-	就像你看到的，这个网站历尽辛苦上线啦！ 这是第一篇post！ 鼓掌！ 我会尽快学会markdown的！
-	去晚自习前吃了昨天剩下来的椰子肉，晚自习的时候肚子成功发出了全教室都能听到的声音，今天晚上用完了手头所有的卫生纸。。
-	最后分享一条正能量知识点，是我蹲在厕所的时候想到的。
+今天晚上找了一间全是男生的自习室，然后达到了两周内效率最高的三个小时！深刻认识了自己的吊死本性。。也证明我是纯直男啊哈哈。。好孤独'T_T'
+就像你看到的，这个网站历尽辛苦上线啦！ 这是第一篇'post'！ 鼓掌！ 我会尽快学会'markdown'的！
+去晚自习前吃了昨天剩下来的椰子肉，晚自习的时候肚子成功发出了全教室都能听到的声音，今天晚上用完了手头所有的卫生纸。。
+最后分享一条'正能量知识点'，是我蹲在厕所的时候想到的。
+
 	>据称： 
 	>	冲马桶的水能在碰到障碍物的时候能崩起六米高
 	>	足以把你想冲的东西溅到脸上。
