--- a/_posts/2014-04-08-new-post.md
+++ b/_posts/2014-04-08-new-post.md
@@ -3,7 +3,7 @@ layout: post
 title: "日常"
 description: " 这是我的第一篇post哦炸天！"
 category: -daily-
-tags: [#拉稀]
+tags: [nnn]
 ---
 {% include JB/setup %}
 
