--- a/_posts/2014-04-08-new-post.md
+++ b/_posts/2014-04-08-new-post.md
@@ -2,8 +2,8 @@
 layout: post
 title: "日常"
 description: " 这是我的第一篇post哦炸天！"
-category: -daily-
-tags: [nnn]
+category:  --daily--
+tags: [-nnn, ---fjj]
 ---
 {% include JB/setup %}
 
