--- a/_posts/2014-04-08-new-post.md
+++ b/_posts/2014-04-08-new-post.md
@@ -19,3 +19,4 @@ tags: [diarrhea, self-study, blogbuild]
 		冲马桶的水能在碰到障碍物的时候能崩起六米高
 		足以把你想冲的东西溅到脸上。
 		所以下回冲水的时候，还是不要回头看了吧 哈哈
+![20140408](\pic\20140408.gif "销魂哦")
