--- a/_posts/2014-04-08-new-post.md
+++ b/_posts/2014-04-08-new-post.md
@@ -19,4 +19,4 @@ tags: [diarrhea, self-study, blogbuild]
 		冲马桶的水能在碰到障碍物的时候能崩起六米高
 		足以把你想冲的东西溅到脸上。
 		所以下回冲水的时候，还是不要回头看了吧 哈哈
-![20140408](https://github.com/franzzzz/franzzzz.github.com/blob/master/pic/210140408.gif "销魂哦")
+![20140408]({{ site.img_url }}/20140408.gif)
