--- a/_posts/2014-04-08-new-page.md
+++ b/_posts/2014-04-08-new-page.md
@@ -125,18 +125,18 @@ MarkdownEditing:
   ### Manual Installation
   
   1. Download or clone this repository to a directory `MarkdownEditing` in the Sublime Text Packages directory for your platform:
-      * Mac: `git clone https://github.com/SublimeText-Markdown/MarkdownEditing.git    
+      * Mac: `git clone https://github.com/SublimeText-Markdown/MarkdownEditing.git`    
       
 
-        ~/Library/Application\ Support/Sublime\ Text\ 2/Packages/MarkdownEditing`
-      * Windows: `git clone https://github.com/SublimeText-Markdown/MarkdownEditing.git   
+        `~/Library/Application\ Support/Sublime\ Text\ 2/Packages/MarkdownEditing`
+      * Windows: `git clone https://github.com/SublimeText-Markdown/MarkdownEditing.git`   
       
 
-        %APPDATA%\Sublime/ Text/ 2/\MarkdownEditing`
-      * Linux: `git clone https://github.com/SublimeText-Markdown/MarkdownEditing.git   
+        `%APPDATA%\Sublime/ Text/ 2/\MarkdownEditing`
+      * Linux: `git clone https://github.com/SublimeText-Markdown/MarkdownEditing.git`   
       
       
-        ~/.Sublime\ Text\ 2/Packages/MarkdownEditing`
+        `~/.Sublime\ Text\ 2/Packages/MarkdownEditing`
   2. Restart Sublime Text to complete installation. Open a Markdown file and this custom theme. The features listed above should now be available.
   
   ## Configuration
