--- a/_posts/2014-04-17-shaizi.md
+++ b/_posts/2014-04-17-shaizi.md
@@ -3,7 +3,7 @@ layout: page
 title: "色子问题"
 description: 
 category: probability
-tags: [algorithm, interview]
+tags: [algorithm， interview]
 ---
 {% include JB/setup %}
 
@@ -13,9 +13,9 @@ tags: [algorithm, interview]
     m<=x<n*x
 
 ##初步思路：
-	将概率结果的精度设为1％，那么能将整个概率所呈的轴分为100份。
-将所有色子按比例均匀叠加到整个概率轴上，1％处应为色子数n（所有色子均掷1），100％处为所有骰子取得最大值ni*mi。
-	此想法完全不能采用，比如ni号色子掷1，而n(i+1)号色子掷mi的情况就完全没有考虑到。
+    将概率结果的精度设为1％，那么能将整个概率所呈的轴分为100份。
+    将所有色子按比例均匀叠加到整个概率轴上，1％处应为色子数n（所有色子均掷1），100％处为所有骰子取得最大值ni*mi。
+    此想法完全不能采用，比如ni号色子掷1，而n(i+1)号色子掷mi的情况就完全没有考虑到。
 	
 ##再想：
 	还是应该以递归的形式完成。穷举完全不在考虑范围内，而简单的叠加是不对的。设f(n, k)表示n个色子掷一次后总和为k的情况总数。那么如果其中一个色子掷的是j面，数量为j。那么f(n, k) = sum{f(n-1, k-j)} 1<=j<=m. 递归的终止条件：f(1,k) = 1;
