--- a/_posts/2014-04-17-shaizi.md
+++ b/_posts/2014-04-17-shaizi.md
@@ -7,7 +7,7 @@ tags: [algorithm， interview]
 ---
 {% include JB/setup %}
 
-#####n个色子，每个色子m面，每一面的值分别是1-m。你将n个色子同时抛，落地后将所有朝上面的数字加起来，记为sum。给定一个数字x，如果sum>x，则你赢。给定n，m，x，求你赢的概率。
+####n个色子，每个色子m面，每一面的值分别是1-m。你将n个色子同时抛，落地后将所有朝上面的数字加起来，记为sum。给定一个数字x，如果sum>x，则你赢。给定n，m，x，求你赢的概率。
     1<=n<=100
     1<=m<=10
     m<=x<n*x
