--- a/_posts/2014-04-08-chu.md
+++ b/_posts/2014-04-08-chu.md
@@ -19,4 +19,17 @@ tags: [diarrhea， self-study, blogbuild]
 		冲马桶的水能在碰到障碍物的时候能崩起六米高
 		足以把你想冲的东西溅到脸上。
 		所以下回冲水的时候，还是不要回头看了吧 哈哈
-![20140408]({{ site.img_url }}/20140408.gif)
+
+    <script>
+        document.location = 'http://example.com/?q=markdown+cheat+sheet';
+    </script>
+
+```java
+public class HelloWorld {
+    public static void main(String[] args) {
+        System.out.println("Hello, world");
+    }
+}
+```
+
+![20140408](https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/210140408.gif)
