--- a/_posts/2014-04-08-chu.md
+++ b/_posts/2014-04-08-chu.md
@@ -20,10 +20,12 @@ tags: [diarrhea， self-study, blogbuild]
 		足以把你想冲的东西溅到脸上。
 		所以下回冲水的时候，还是不要回头看了吧 哈哈
 
+如下 script脚本不管用
     <script>
         document.location = 'http://example.com/?q=markdown+cheat+sheet';
     </script>
 
+如下 “```java” & “```” 全部被消除 但是代码没有高亮
 ```java
 public class HelloWorld {
     public static void main(String[] args) {
@@ -32,4 +34,5 @@ public class HelloWorld {
 }
 ```
 
+内部图片成功显示
 ![20140408](https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/210140408.gif)
