--- a/_posts/2014-04-08-chu.md
+++ b/_posts/2014-04-08-chu.md
@@ -25,7 +25,7 @@ tags: [diarrhea， self-study, blogbuild]
         document.location = 'http://example.com/?q=markdown+cheat+sheet';
     </script>
 
-如下 “```java” & “```” 全部被消除 但是代码没有高亮
+如下 “\`\`\`java” & “\`\`\`” 全部被消除 但是代码没有高亮
 ```java
 public class HelloWorld {
     public static void main(String[] args) {
