--- a/_posts/2014-04-08-chu.md
+++ b/_posts/2014-04-08-chu.md
@@ -21,7 +21,9 @@ tags: [diarrhea， self-study, blogbuild]
 		所以下回冲水的时候，还是不要回头看了吧 哈哈
 
 如下 script脚本不管用
-
+    <script>
+        document.location = 'http://example.com/?q=markdown+cheat+sheet';
+    </script>
 
 如下语法标记全部被消除 但是代码没有高亮
 
