--- a/_posts/2014-04-08-chu.md
+++ b/_posts/2014-04-08-chu.md
@@ -20,13 +20,17 @@ tags: [diarrhea， self-study, blogbuild]
 		足以把你想冲的东西溅到脸上。
 		所以下回冲水的时候，还是不要回头看了吧 哈哈
 
-如下 script脚本不管用
-    <script>
-        document.location = 'http://example.com/?q=markdown+cheat+sheet';
-    </script>
+测试 script脚本不能用
+
 
 如下语法标记全部被消除 但是代码没有高亮
-
+```java
+public class HelloWorld {
+    public static void main(String[] args) {
+        System.out.println("Hello, world");
+    }
+}
+```
 
 内部图片成功显示
 ![20140408](https://raw.github.com/franzzzz/franzzzz.github.com/master/pic/210140408.gif)
