--- a/_posts/2015-9-17-as-is.md
+++ b/_posts/2015-9-17-as-is.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "日常"
-description: " as is 用法"
+title: "as is 用法"
+description: "as is 指认可（可能有瑕疵的）现状。"
 category: daily
 tags: [self-study]
 ---
@@ -12,7 +12,7 @@ tags: [self-study]
 
 		As is is a legal term used to disclaim some implied warranties for an item being sold. Certain types of implied warranties must be specifically disclaimed, such as the implied warranty of title. "As is" denotes that the seller is selling, and the buyer is buying an item in whatever condition it presently exists, and that the buyer is accepting the item "with all faults", whether or not immediately apparent. This is the classic "buyer beware" situation, where the careful buyer should take the time to examine the item before accepting it, or obtain expert advice.[1]
 
-这是一个用于免责声明的法律术语和概念，"As is"表示买卖双方认可“现状”(当前的情形)正在出售的商品(或服务)，尤其是买家接受这个商品(或服务) “全部的瑕疵”，无论是现在出现的还是将来出现的。[2]
+这是一个用于免责声明的法律术语和概念，**"As is"表示买卖双方认可“现状”(当前的情形)正在出售的商品(或服务)，尤其是买家接受这个商品(或服务) “全部的瑕疵”，无论是现在出现的还是将来出现的。**[2]
 它相对于普通的old/original，还多了一层“买方接受目前的状态（包括瑕疵）”的意思。怪不得对方不用普通的old/original/current，而用偏法律声明的词汇。
 
 		e.g. 房东在我的合同上写了一句：Apart. is rented as is。
